--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^1.2.0",
+    "@types/uuid": "^9.0.1",
     "prettier-plugin-tailwindcss": "^0.3.0"
   }
 }
